# crawlcomply-backend

./: Cargo.toml  IDEAS.md  README.md  debian.Dockerfile
.github/workflows/: test.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-09-07-023524_create_org/: up.sql
migrations/2025-09-07-023524_create_profile/: up.sql
migrations/2025-09-07-023525_create_org/: down.sql  up.sql
migrations/2025-09-07-023525_create_profile/: down.sql  up.sql
migrations/2025-09-07-023526_create_repo/: up.sql
migrations/2025-09-07-023527_create_repo_history/: down.sql  up.sql
migrations/2025-09-07-023528_create_run_history/: down.sql  up.sql
src/: lib.rs  schema.rs
src/models/: clients.rs  mod.rs  org.rs  org_username.rs  profile.rs  profiles.rs  repo.rs  repo_history.rs  run_history.rs  users.rs
src/routes/: mod.rs  org.rs  profile.rs  repo.rs  repo_history.rs  run_history.rs
src/tests/routes/: helpers.rs  mod.rs
src/tests/routes/org/: helpers.rs  mod.rs  test_org.rs
src/tests/routes/profile/: helpers.rs  test_profile.rs
src/tests/routes/repo/: helpers.rs  mod.rs  test_repo.rs
src/tests/routes/repo_history/: helpers.rs  mod.rs  test_repo_history.rs
src/tests/routes/run_history/: helpers.rs  mod.rs  test_run_history.rs
